--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,28 @@
   color: #61dafb;
 }
 
+.checked {
+  position:relative;
+}
+
+.checked::after {
+  content:'';
+  position: absolute;
+  width:100%; height:1px;
+  top: 50%; left: 0;
+  background-color:#000;
+  animation-name: strike;
+  animation-duration: .3s;
+  animation-timing-function: ease-out;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes strike {
+  0%{ width:0; }
+  100%{ width:100%; }
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
